piano.html is actually index.html + vice versa

--- a/piano.html
+++ b/piano.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>gen.re - "Insert slogan here"</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-  <link rel="stylesheet" href="piano.css">
+  <link rel="stylesheet" href="index.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -19,6 +19,7 @@
   <script src='https://cdnjs.cloudflare.com/ajax/libs/react-dom/17.0.2/umd/react-dom.production.min.js'></script><script  src="./script.js"></script>
   </div>
 
+
   <div class="landing-page">
     <div class="navbar">
       <a href="./index.html">Gen.re</a>
@@ -26,10 +27,8 @@
 
     <div class="title-section">
       <div class="">
-        <h1>Melody Piano</h1>
-        <p>
-          Upload a MIDI (.mid) file to get started, or create your own on the piano!
-        </p>
+        <h1>Gen.re</h1>
+        <p>"Insert slogan here"</p>
       </div>
     </div>
   
