--- a/home.html
+++ b/home.html
@@ -118,7 +118,7 @@
       <h1 style = "
       background: linear-gradient(93.51deg, #9b51e0 2.84%, #3081ed 99.18%);
       -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;">gen.re's Solution</h1>
+      -webkit-text-fill-color: transparent;">Gen.re's Solution</h1>
       <p>
         Thankfully, Gen.re proposes a solution:
 
